--- a/.github/workflows/ci-prod.yaml
+++ b/.github/workflows/ci-prod.yaml
@@ -4,9 +4,9 @@ name: CI Production
 on:
   workflow_run:
     workflows:
-      - "release"
+      - release
     branches:
-      - "main"
+      - main
     type:
       - completed
 
@@ -16,6 +16,7 @@ env:
 jobs:
   build-publish:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - uses: actions/checkout@v2
       - name: Push images
