--- a/.github/workflows/ci-prod.yaml
+++ b/.github/workflows/ci-prod.yaml
@@ -18,6 +18,8 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - uses: actions/checkout@v2
+      - name: Fetch GIT history
+        run: git fetch --prune --unshallow
       - name: Push images
         run: |
           IMAGE_ID=docker.pkg.github.com/${{ github.repository }}/$IMAGE_NAME
@@ -25,6 +27,5 @@ jobs:
           GITREF=$(echo $GITHUB_SHA | sed 's/.*\(.........\)/\1/')
           echo GITREF=$GITREF
           VERSION=$(git describe --tags `git rev-list --tags --max-count=1`)
-          echo VERSION=$VERSION
           echo IMAGE_ID=$IMAGE_ID
           echo VERSION=$VERSION
