fix: fix step output

--- a/.github/workflows/ci-prod.yaml
+++ b/.github/workflows/ci-prod.yaml
@@ -31,7 +31,7 @@ jobs:
           echo VERSION=$VERSION
       - name: Get service name
         id: service-name
-        run: INPUT=$(echo ${{ github.repository }} | sed -e 's/vmonjaret\/\b\(.\)/\u\1/') echo "::set-output name=service-name::${INPUT,,}"
+        run: echo "::set-output name=service-name::$(echo ${{ github.repository }} | sed -e 's/vmonjaret\/\b\(.\)/\u\1/')"
       - name: Get Package.json version
         id: package-version
         uses: martinbeentjes/npm-get-version-action@master
@@ -40,7 +40,7 @@ jobs:
         env:
           SLACK_COLOR: ${{ job.status }}
           SLACK_FOOTER: ""
-          SLACK_TITLE: ${{ steps.service-name.outputs.service-name}}
+          SLACK_TITLE: ${{ steps.service-name.outputs.service-name }}
           SLACK_MESSAGE: Deployed ${{ steps.package-version.outputs.current-version}} to staging 🚀
           SLACK_USERNAME: "Product Release Bot"
           SLACK_WEBHOOK: "${{ secrets.SLACK_NOTIFICATION }}"
