--- a/.github/workflows/ci-prod.yaml
+++ b/.github/workflows/ci-prod.yaml
@@ -32,7 +32,9 @@ jobs:
           echo IMAGE_NAME=$IMAGE_NAME
       - name: Get Package.json version
         id: package-version
-        uses: martinbeentjes/npm-get-version-action@master
+        run: |
+          PACKAGE_VERSION=$(cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[",]//g' | tr -d '[[:space:]]')
+          echo ::set-output name=current-version::$PACKAGE_VERSION
       - name: Get service name
         id: service-name
         run: echo "::set-output name=service-name::$(echo ${IMAGE_NAME^})"
