--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
-*                   vmonjaret
-/ops/**/test.txt    saezchristopher
+*                   @vmonjaret
+/ops/**/test.txt    @saezchristopher
