--- a/.github/workflows/ci-prod.yaml
+++ b/.github/workflows/ci-prod.yaml
@@ -18,7 +18,7 @@ env:
 jobs:
   build-publish:
     runs-on: ubuntu-latest
-    if: ${{ github.event == 'workflow_dispatch' || (github.event == 'workflow_run' && github.event.workflow_run.conclusion == 'success')) }}
+    if: ${{ github.event == 'workflow_dispatch' || (github.event == 'workflow_run' && github.event.workflow_run.conclusion == 'success') }}
     steps:
 
       - name: test
